--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "gh-pages": "^6.3.0",
     "globals": "^16.3.0",
+    "react-icons": "^5.5.0",
     "typescript": "^5.9.2",
     "vite": "^7.1.2"
   }
