--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://sabatmonk.github.io/leguidedepoche",
+  "homepage": "https://yoannsab.github.io/leguidedepoche",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist --cname leguidedepoche.fr"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.3",
