--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://yoannsab.github.io/leguidedepoche",
+  "homepage": "leguidedepoche.fr",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
